-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.13.1
-
None
-
-
133da9797eca71d4f9ee56ae0ddde9af2f421800 (qt-creator/qt-creator/master)
When I add namespace for form class, I can't press Next button
For Gerrit Dashboard: QTCREATORBUG-24723 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
316086,2 | Designer: Allow namespaces for form editor class | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |