Designer: Allow namespaces for form editor class

Fixes: QTCREATORBUG-24723
Change-Id: I355a9ea0f5f7156bf744ab87ca19870883af936e
Reviewed-by: David Schulz <david.schulz@qt.io>